--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ matplotlib = "^3.8.2"
 shapely = "^2.0.2"
 pysal = "^23.7"
 contextily = "^1.5.0"
+rioxarray = "^0.15.0"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.28.0"
