--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ readme = "README.md"
 packages = [{include = "earth_data_science_textbook"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
-pandas = "^2.1.4"
-numpy = "^1.26.3"
+python = ">=3.10,<3.11"
+pandas = "<2.1.4"
+numpy = "<1.22.2"
 geopandas = "^0.14.2"
 seaborn = "^0.13.1"
 earthpy = "^0.9.4"
@@ -18,6 +18,7 @@ shapely = "^2.0.2"
 pysal = "^23.7"
 contextily = "^1.5.0"
 rioxarray = "^0.15.0"
+pymc3 = "^3.11.5"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.28.0"
